Fixed white space on small devices

--- a/_sass/custom-style.scss
+++ b/_sass/custom-style.scss
@@ -34,7 +34,7 @@ html {
 }
 
 // Header numbering added using the numbered class
-h1, h2, h3, h4, h5, h6 {padding-top: 0px}
+h1, h2, h3, h4, h5, h6 {padding-top: 15px}
 
 body {counter-reset: h2}
 h2 {counter-reset: h3}
